Use container, fix tags, & fix flexbox overflow

--- a/src/page.scss
+++ b/src/page.scss
@@ -25,6 +25,7 @@ $beige-lighter: #eff0eb;
 @forward "bulma/sass/components/menu";
 @forward "bulma/sass/layout/section";
 @forward "bulma/sass/grid/columns";
+@forward "bulma/sass/layout/container";
 @forward "bulma/sass/elements/content";
 
 $mid-padding: map.get(spacing.$spacing-values, "4");
@@ -54,4 +55,8 @@ $mid-padding: map.get(spacing.$spacing-values, "4");
 
 .break-word {
     word-break: break-word;
+}
+
+.min-width-0 {
+    min-width: 0;
 }
